--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -408,7 +408,7 @@ double PID::Controle(double e, double y, double h)//Controlador PI-D
 
 \section{CONCLUSÃO}
 
-\hspace{4ex}Os testes realizados mostram que ao utilizar um controlador em cascata aumenta a estabilidade do sistema diminuindo a sua oscilação do tanque 1 e melhorandado o resultado em geral, mas aumenta a complexidade do projeto pois é necessario sintonizar dois controladores.
+\hspace{4ex}A partir dos testes realizados com os pólos em zero, pólos imaginários e pólos reais, pode-se concluir que o observador de estados mostrou que o valor observado do tanque 2 será semelhante e, muitas vezes, igual ao valor real do nível, enquanto que o valor observável do tanque 1 foi uma aproximação. Além disso, no caso dos pólos imaginários em particular, o nível observável do tanque 1 se mostrou muito oscilatório com relação ao seu valor real.
 
 \newpage
 %%%%%%%% REFERÊNCIAS %%%%%%%%%%%%%%%%%
