--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -98,8 +98,8 @@ CURSO DE ENGENHARIA DE COMPUTAÇÃO
 
 \vspace{3.6cm}
 
-{\bf{\large RELATÓRIO DA 5ª EXPERIÊNCIA\\
-CONTROLE NO ESPAÇO DE ESTADOS: OBSERVADORES DE ESTADO\\
+{\bf{\large RELATÓRIO DA 6ª EXPERIÊNCIA\\
+CONTROLE NO ESPAÇO DE ESTADOS: SEGUIDOR DE REFERÊNCIA\\
 }}
 \vspace{1.5cm}
 {\large TURMA: 01 A\\
@@ -149,14 +149,14 @@ VITOR RAMOS GOMES DA SILVA: 20160154415\\
 \end{center}
 \vspace{3cm}
 
-{\bf{\large {\centering CONTROLE NO ESPAÇO DE ESTADOS: OBSERVADORES DE ESTADO\\}}}
+{\bf{\large {\centering CONTROLE NO ESPAÇO DE ESTADOS: SEGUIDOR DE REFERÊNCIA\\}}}
 
 \vspace{4cm}
 
 \begin{adjustwidth}{7.5cm}{0cm}
 
 {\normalsize
-Quinto relatório apresentado à disciplina de
+Sexto relatório apresentado à disciplina de
 Laboratório de Sistemas de Controle, correspondente à
 avaliação da 3º unidade do semestre 2017.1 do 8º período
 do curso de Engenharia de Computação da
